<resources>
    <string name="app_name">Desavio Dominguero</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyB3aUMAfnSy8RhH6BijSboKSXBSNOX1ZrE</string>
    <string name="btn_distritos">DISTRITOS</string>
    <string name="btn_mapa">MAPA</string>
    <string name="menu_maps">Buscador por mapa</string>
    <string name="menu_districts">Buscador por distritos</string>
    <string name="negocio">Negocios</string>
    <string name="menu_add_business">Adjuntar negocio nuevo</string>
    <string name="menu_help">Ayuda sobre la App</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_credits">Créditos</string>
    <string name="title_select_district">Seleccione un Distrito</string>
    <string name="title_select_business">Seleccione un Negocio</string>
    <string name="form_business_enunciado">¿Desea añadir los datos de un negocio? Póngase en contacto con nosotros mediante este formulario. Gracias.</string>
    <string name="help_text_enunciado">Encuentra los negocios que están abiertos el Domingo, mediante nuestros buscadores</string>
    <string name="content_description_help_image">Ilustración de ayuda o guía de la aplicación</string>
    <string name="form_business_hint_name">Introduce su nombre</string>
    <string name="form_business_hint_business_name">Introduce el nombre del negocio</string>
    <string name="form_business_hint_address">Introduce la dirección del negocio</string>
    <string name="form_business_hint_phone">Introduce número de teléfono</string>
    <string name="form_business_hint_email">Introduce dirección de email</string>
    <string name="credits_title_author">Autor de la APP</string>
    <string name="credits_title_collaborator">Colaboradora en el diseño</string>
    <string name="credits_author_name">Alberto Morales</string>
    <string name="credits_collaborator_name">Patricia Guerrero</string>
    <string name="credits_description">La aplicación ha sido desarrollada como práctica después de un curso de Android promovido por el Servicio Estatal de Empleo Español...</string>
    <string name="toolbar_title_districts">Distritos</string>
    <string name="district_name_north">Norte</string>
    <string name="district_desc_north">Plaza del Caballo, Álvaro Domecq, San Joaquín, Torres de Córdoba, El Almendral, Montealto, El Altillo, Las Flores, El Bosque, Parque González Hontoria, Zona Hipercor, Jacaranda.</string>
    <string name="district_name_west">Oeste</string>
    <string name="district_desc_west">Picadueña, San Valentín, Las Torres, Sagrada Familia, La Plata, La Coronación, Icovesa, Juan XXIII, Los Naranjos, El Calvario, Polígono San Benito,  Avd. de la Cruz Roja, La Unión.</string>
    <string name="district_name_center">Centro</string>
    <string name="district_desc_center">San Mateo, San Dionisio, Catedral, Divina Pastora, La Constancia, San Pedro, Pío XII, Vallesequillo, Calle Porvenir, Plaza de las Angustias, Calle Corredera, Madre de Dios, Santiago.</string>
    <string name="map_click_to_open_google_maps">Click para acceder a Google Maps</string>
    <string name="map_placeholder_business_name">Alimentación y Bazar</string>
    <string name="map_placeholder_business_info">Tienda típica china con casi de todo...</string>
    <string name="map_label_schedule">Horario</string>
    <string name="map_placeholder_schedule">9:30 – 22:30</string>
    <string name="map_label_address">Dirección:</string>
    <string name="map_placeholder_address">Urbanización, Calle Sevilla, 24</string>
    <string name="content_description_business_image">Imagen del negocio en el mapa</string>
    <string name="district_name_south">Sur</string>
    <string name="district_desc_south">Estancia Barrera, Vista Alegre, Torresoto, Hijuela de las Coles, Federico Mayo, San Telmo, Liberación, El Portal, Blas Infante, Santo Tomás de Aquino, Puertas del Sur, Torres del Sur.</string>
    <string name="toast_no_internet">No tienes conexión a internet</string>
    <string name="toast_whatsapp_not_installed">No tienes Whatsapp instalado</string>
    <string name="toolbar_title_add_business">Adjuntar Negocio Nuevo</string>
    <string name="error_nombre_valido">Introduce un nombre válido</string>
    <string name="error_nombre_negocio_valido">Introduce un nombre de negocio válido</string>
    <string name="error_direccion_valida">Introduce una dirección válida</string>
    <string name="error_telefono_valido">Introduce un número correcto</string>
    <string name="error_email_valido">Introduce un email correcto</string>
    <string name="toast_form_not_valid">Formulario no válido</string>
    <string name="toast_form_sent">Formulario enviado</string>
    <string name="email_subject_new_business">Cliente que quiere añadir negocio nuevo</string>
    <string name="email_destination_new_business">ansmorales@gmail.com</string>
    <string name="chooser_title_email">Elije un cliente de Correo:</string>
    <string name="share_app_text">Descárgate la APP</string>
    <string name="district_name_northwest">Noroeste</string>
    <string name="district_desc_northwest">El Pelirón, Torresblancas, San José Obrero, La Granja, San Enrique, Los Pinos, Chapín, La Marquesa, Jerez Norte, La Cañada, Avd. Lola Flores, Santa Teresa, Avd. Europa.</string>
    <string name="toolbar_title_credits">Créditos</string>
    <string name="toolbar_title_help">Ayuda</string>
    <string name="chooser_title_open_with">Abrir con</string>
    <string name="district_name_east">Este</string>
    <string name="district_desc_east">La Vid, Zafer, La Asunción, Olivar de Rivero, El Retiro, Princijerez, Nueva Andalucía, Montealegre, Pago San José, Parque Atlántico, La Canaleja, La Pita, La Milagrosa, Villa del Este.</string>
    <string name="content_description_author_photo">Foto de perfil del autor, Alberto Morales</string>
    <string name="content_description_collaborator_photo">Foto de perfil de la colaboradora, Patricia Guerrero</string>
    <string name="content_description_linkedin_logo">Logo de LinkedIn. Enlace al perfil del autor.</string>
    <string name="content_description_github_logo">Logo de GitHub. Enlace al repositorio del autor.</string>
    <string name="content_description_app_logo">Logo de la aplicación</string>
    <string name="form_business_btn_accept">ACEPTAR</string>
    <string name="content_description_portada">Imagen de portada de la aplicación</string>
    <string name="content_description_icono_distritos">Icono que representa la sección de distritos</string>
    <string name="content_description_icono_mapa">Icono que representa la sección de mapa</string>
    <string name="logo_app">Logo de la app Desavio Dominguero</string>
    <string name="descripcion_imagen_distrito">Imagen representativa del distrito</string>
    <string name="descripcion_imagen_negocio">Imagen representativa del negocio</string>
    <string name="toast_error_network">Error de red o conexión. Inténtalo de nuevo.</string>
</resources>
