<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_creditos"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryContainer"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleCentered="true"
        app:titleTextColor="?attr/colorSurface" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_title_author"
                android:textColor="?attr/colorOnBackground"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/foto_autor"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/foto_al"
                    app:civ_border_color="?attr/colorPrimaryContainer"
                    app:civ_border_width="2dp"
                    android:contentDescription="@string/content_description_author_photo"/>

                <TextView
                    android:id="@+id/nombre_autor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/credits_author_name"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/logo_linkedin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:src="@drawable/linkedin"
                    android:contentDescription="@string/content_description_linkedin_logo"/>

                <ImageView
                    android:id="@+id/logo_github"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:src="@drawable/logogithub"
                    android:contentDescription="@string/content_description_github_logo"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/credits_title_collaborator"
                android:textColor="?attr/colorOnBackground"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/foto_colaboradora"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/foto_pa"
                    app:civ_border_color="?attr/colorPrimaryContainer"
                    app:civ_border_width="2dp"
                    android:contentDescription="@string/content_description_collaborator_photo"/>

                <TextView
                    android:id="@+id/nombre_colaboradora"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/credits_collaborator_name"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="20sp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/logo"
                android:contentDescription="@string/content_description_app_logo"/>

            <TextView
                android:id="@+id/descripcion_creditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/credits_description"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
